Tue Sep 17 18:44:08 1991  Linus Tolke Y  (linus at lysator)

	* lyskom-rest.el, prioritize.el (lyskom-start-of-command): Nu
	  konverterar vi {ven error-meddelanden bl.a. V{nta p} prompten.
	  Ny funktion: lyskom-error.		     

Mon Sep 16 18:10:59 1991  Linus Tolke Y  (linus at lysator)

	* Distribuerat version 0.34.1		22:00

	* lyskom-rest.el (kom-view-next-text): Lagt till ett anrop som
	  t|mmer lyskom-to-do-list ocks} n}r man l{ser. ]terse markerade
	  buggen berodde av detta.

	* clienttypes.el (read-list-delete-text): Justerat doc-str{ngen.

	* prioritize.el (lyskom-prioritize-1,lyskom-prioritize-2): Fixat
	  s} att ledtexterna l{ggs in med lyskom-insert (blir
	  iso->swascii-konverterade.

	* edit-text.el (lyskom-edit-read-misc-list): Buggfix. Det jag
	  gjorde ig}r. Nu funkar det att l{gga in texter ocks}.

Sun Sep 15 18:17:11 1991  Linus Tolke Y  (linus at robin)

	* lyskom-rest.el, edit-text.el, swedish-strings.el
	  (lyskom-edit-insert-misc, lyskom-edit-read-misc-list): Fixat s}
	  att den konverterar {ver [rende raden och skriv texten raden.

	* commands1.el (lyskom-change-name): Scrollar p} r{tt st{lle.

	* edit-text.el, startup.el, commands1.el (kom-list-persons,
	  kom-list-conferences, kom-edit-send, kom-create-conf):
	  read-string ersatt med lyskom-read-string.

	* edit-text.el (lyskom-edit-mode): Nu skall vi inte f} f|rsta
	  tangenttryckningen att betyda lyskom-kommandon.

	* vars.el, commands1.el: Inlagt en kom-quit-hook.

Fri Sep 13 23:50:56 1991  Inge Wallin  (inge at lysator)

	* lyskom-rest.el(lyskom-set-mode-line): Nu rapporterar klienten
	  b}de antal ol{sta i nuvarande m|te och totalt antal ol{sta i
	  status-raden. 

Mon Sep  9 16:35:39 1991  Lars Willf|r  (willfor at robin)

	* Tog bort hanteringen av den gamla typen av
	  broadcast-meddelanden.

	* Tog bort den gamla funktionen lyskom-show-broadcast-message
	  (ers{tts av lyskom-show-personal-message) och den av den
	  funktionen anv{nda str{ngen broadcast-from.
