@@ -1,3 +1,7 @@
+Sat Sep 28 21:33:38 1991  Per Cederqvist  (ceder at ruben)
+
+	* async.el (lyskom-parse-async): Removed the "info" backdoor.
+
 Tue Sep 17 18:44:08 1991  Linus Tolke Y  (linus at lysator)
 
 	* lyskom-rest.el, prioritize.el (lyskom-start-of-command): Nu
